bump version and hukkit for html-like tags