@@ -27,14 +27,14 @@ public class BroadcastToLANTask implements Runnable {
 
         // https://wiki.vg/Server_List_Ping#Ping_via_LAN_.28Open_to_LAN_in_Singleplayer.29
         try (DatagramSocket socket = new DatagramSocket()) {
-            var motd = plugin.getServer().getMotd();
+            String motd = plugin.getServer().getMotd();
 
             if (Config.OVERRIDE_MOTD
                     && !Config.MOTDS.isEmpty()) {
-                motd = TextHelper.formatColors(Config.MOTDS.get(MathHelper.getRandomInt(0, Config.MOTDS.size())));
+                motd = TextHelper.formatText(Config.MOTDS.get(MathHelper.getRandomInt(0, Config.MOTDS.size())));
             }
 
-            var payload = "[MOTD]%s[/MOTD][AD]%d[/AD]".formatted(motd, port).getBytes(StandardCharsets.UTF_8);
+            byte[] payload = String.format("[MOTD]%s[/MOTD][AD]%d[/AD]", motd, port).getBytes(StandardCharsets.UTF_8);
             DatagramPacket packet = new DatagramPacket(payload, payload.length,
                     InetAddress.getByName("224.0.2.60"), 4445);
             socket.send(packet);
